--- a/index.html
+++ b/index.html
@@ -1,5 +1,79 @@
-There are campsites available from 2020-06-20 to 2020-08-20 for 3 consecutive nights!!!
-<br> LOWER PINES (232450): 0 site(s) available out of 75 site(s)
-<br> UPPER PINES (232447): 0 site(s) available out of 240 site(s)
-<br> BASIN MONTANA CAMPGROUND (232770): 29 site(s) available out of 30 site(s)
-<br> MANZANITA LAKE (234039): 52 site(s) available out of 180 site(s)
+There are campsites available from 2020-06-21 to 2020-08-21 for 3 consecutive nights!
+<br> 🏕 MANZANITA LAKE (234039): 58 site(s) available out of 180 site(s). <br> Dates Available:
+<br> 07-01-2020 Wednesday
+<br> 07-08-2020 Wednesday
+<br> 07-09-2020 Thursday
+<br> 07-12-2020 Sunday
+<br> 07-15-2020 Wednesday
+<br> 07-16-2020 Thursday
+<br> 07-19-2020 Sunday
+<br> 07-20-2020 Monday
+<br> 07-21-2020 Tuesday
+<br> 07-22-2020 Wednesday
+<br> 07-23-2020 Thursday
+<br> 07-24-2020 Friday
+<br> 07-26-2020 Sunday
+<br> 07-27-2020 Monday
+<br> 07-28-2020 Tuesday
+<br> 07-29-2020 Wednesday
+<br> 07-30-2020 Thursday
+<br> 08-02-2020 Sunday
+<br> 08-03-2020 Monday
+<br> 08-04-2020 Tuesday
+<br> 08-05-2020 Wednesday
+<br> 08-06-2020 Thursday
+<br> 08-07-2020 Friday
+<br> 08-08-2020 Saturday
+<br> 08-09-2020 Sunday
+<br> 08-10-2020 Monday
+<br> 08-11-2020 Tuesday
+<br> 08-12-2020 Wednesday
+<br> 08-13-2020 Thursday
+<br> 08-14-2020 Friday
+<br> 08-15-2020 Saturday
+<br> 08-16-2020 Sunday
+<br> 08-17-2020 Monday
+<br> 08-18-2020 Tuesday
+<br> 08-19-2020 Wednesday
+<br> 08-20-2020 Thursday
+<br> 🏕 SUMMIT LAKE SOUTH (234040): 25 site(s) available out of 48 site(s). <br> Dates Available:
+<br> 06-30-2020 Tuesday
+<br> 07-05-2020 Sunday
+<br> 07-06-2020 Monday
+<br> 07-08-2020 Wednesday
+<br> 07-09-2020 Thursday
+<br> 07-12-2020 Sunday
+<br> 07-13-2020 Monday
+<br> 07-14-2020 Tuesday
+<br> 07-15-2020 Wednesday
+<br> 07-16-2020 Thursday
+<br> 07-19-2020 Sunday
+<br> 07-20-2020 Monday
+<br> 07-21-2020 Tuesday
+<br> 07-22-2020 Wednesday
+<br> 07-23-2020 Thursday
+<br> 07-26-2020 Sunday
+<br> 07-27-2020 Monday
+<br> 07-28-2020 Tuesday
+<br> 07-29-2020 Wednesday
+<br> 07-30-2020 Thursday
+<br> 07-31-2020 Friday
+<br> 08-02-2020 Sunday
+<br> 08-03-2020 Monday
+<br> 08-04-2020 Tuesday
+<br> 08-05-2020 Wednesday
+<br> 08-06-2020 Thursday
+<br> 08-07-2020 Friday
+<br> 08-08-2020 Saturday
+<br> 08-09-2020 Sunday
+<br> 08-10-2020 Monday
+<br> 08-11-2020 Tuesday
+<br> 08-12-2020 Wednesday
+<br> 08-13-2020 Thursday
+<br> 08-14-2020 Friday
+<br> 08-15-2020 Saturday
+<br> 08-16-2020 Sunday
+<br> 08-17-2020 Monday
+<br> 08-18-2020 Tuesday
+<br> 08-19-2020 Wednesday
+<br> 08-20-2020 Thursday
